checker/examples/units-extension/Expected.txt
Demo.java:30: error: [assignment.type.incompatible] incompatible types in assignment.
        frq = 5;
              ^
  found   : @Scalar int
  required: @Hz int
Demo.java:61: error: [assignment.type.incompatible] incompatible types in assignment.
        @Hz int badTernaryAssign = seconds > 10 ? hertz : kilohertz;
                                                ^
  found   : @Frequency int
  required: @Hz int
2 errors
